--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext{
     retrofit_version = '2.9.0'
     glide_version = '4.11.0'
     okhttp3_version = '4.8.0'
+    fragment_ktx_version = '1.2.5'
 }
 
 dependencies {
@@ -52,10 +53,14 @@ dependencies {
 
     //glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // okhttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+
+    // ktx
+    implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
