--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ ext{
     retrofit_version = '2.9.0'
     glide_version = '4.11.0'
     okhttp3_version = '4.8.0'
+    lifecycle_version = '2.2.0'
 }
 
 dependencies {
@@ -42,6 +43,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
 
     // rx
     implementation "io.reactivex.rxjava2:rxjava:$rx_java_version"
@@ -49,13 +51,22 @@ dependencies {
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-    //glide
+    // retrofit 에서 받은 응답을 옵서버블로 변환해주는 라이브러리
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+    // glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     // okhttp3
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+
+    // viewModel & liveData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
