--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
     buildFeatures {
         dataBinding true
     }
+
+    //에러해결 현선 추가
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 ext{
@@ -71,5 +77,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //material date/time picker
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
 
 }
