#15 주소 검색 모듈 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,5 +30,11 @@
             android:windowSoftInputMode="adjustResize" />
 
         <activity android:name=".presentation.invitationpreview.InvitationPreviewActivity" />
+        <activity android:name=".presentation.searchaddress.ui.InputAddressActivity" />
+        <activity android:name=".presentation.searchaddress.ui.SearchAddressActivity" />
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="16e5c5f8df2c682432c3659bd5c2a8d5" />
     </application>
 </manifest>
