Feature/16 type choice (#26)
* #11 타입별 저장할 수 있는 sharedprefence util 작성

* #13 이미지 피커 fragment 및 viewmodel 추가

* #13 기본적인 리스트 adpater틀 작성

* #13 리스트 아이템 클릭시 이미지 피커 실행

* #13 item 클릭시 position도 같이 보내도록 수정 및 item delete 메소드 추가

* #13 showImagePicker 인자 수정

* #5 공용으로 사용하게될 라이브러리들 추가

* #11 패키지 이동

* #11 recyclerview dependency 제거, preference util set메소드명 put으로 수정

* #16 타입 셀렉트를 위한 activity 추가 및 type 선택 viewpager 및 dot indicator 추가

* #16 제플린 가이드에 맞추고 서버 통신 필요한 부분 주석 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+      
         <activity
             android:name=".presentation.invitationtitle.InvitationTitleActivity"
             android:windowSoftInputMode="adjustResize" />
-
+        <activity android:name=".presentation.typechoice.TypeChoiceActivity"/>
         <activity android:name=".presentation.invitationpreview.InvitationPreviewActivity" />
         <activity android:name=".presentation.searchaddress.ui.InputAddressActivity" />
         <activity android:name=".presentation.searchaddress.ui.SearchAddressActivity" />
