--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <activity android:name=".presentation.main.MainActivity">
+        <activity android:name=".presentation.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".presentation.main.MainActivity" />
         <activity
             android:name=".presentation.invitationtitle.InvitationTitleActivity"
             android:windowSoftInputMode="adjustResize" />
