유형 선택시 발생하는 싱크 문제 수정
Signed-off-by: dlwls5201 <dlwls5201@naver.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
 
         <activity android:name=".presentation.invitationpreview.InvitationPreviewActivity" />
 
+        <activity android:name=".presentation.invitationlist.InvitationListActivity" />
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="16e5c5f8df2c682432c3659bd5c2a8d5" />
