--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 
         <activity android:name=".presentation.invitationlist.InvitationListActivity" />
 
+        <activity android:name=".presentation.invitationlist.LandingPageActivity" />
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="16e5c5f8df2c682432c3659bd5c2a8d5" />
